Fix screen margin-top on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1195,7 +1195,7 @@ getting started page
 
   .step-image {
       position: relative;
-      margin-top: 0;
+      margin-top: 3rem;
       width: 100%;
   }
 
